# API_Amul-Protein-Notifier

./: .env.example  .gitignore  README.md  api_client.py  cache.py  check_products.py  common.py  config.py  database.py  main.py  migrate_sqlite_to_postgres.py  migration_script.py  notifier.py  product_checker.py  pyproject.toml  requirements.txt  sentry_utils.py  simple_checker.py  substore_list.py  substore_mapping.py  sync_db_to_github.py  users.db-shm  users.db-wal  utils.py
.github/: FUNDING.yml
.github/workflows/: check-availability.yml
